projects/fse 1.6-5 bobcat/css/style.css
/* Universal styles */

  html {
    font-family: "Roboto", sans-serif;
    font-size: 1rem;
  }
  
  .main-content {
    position: relative;
    top: 5.3125rem; /* To offset for fixed header. */
  }

  .center {
    text-align: center;
  }
  
  .button {
    border: 2px solid #c6c1c1;; 
    border-radius: 4px;
    background-color: #4a4a4a;
    color: white;
  }
  
  .images-container {
    margin: 1rem;
  }

  .image-container {
    overflow: hidden;
  }
  
  .image-container img {
    display: block;
    max-width: 100%;
  }
  
  @media only screen and (max-width: 55.875rem) { 
    .main-content {
      top: 2.5625rem;
    }
  }
  
  /* At desktop width, remove mobile navbar Join us button */
  /* Note other folds end at 894px, this starts at 895px*/
  @media only screen and (min-width: 55.9375rem) { 
    header .button {
      display: none;
    }
  }
  
  /* Header section */

  header {
    position: fixed;
    z-index: 100;
    width: 100%;
    border-bottom: solid 1px #c6c1c1;
    background-color: white;
  }
  
  header .navbar {
    display: flex;
    align-items: center;
    padding: 1.875rem;
  }
  
  header .logo {
    flex: 1;
  }
  
  header nav ul {
    display: flex;
  }
  
  nav li {
    padding-left: 3.5rem;
  }
  
  nav a {
    vertical-align: bottom;
    line-height: 1.6;
    font-size: 1rem;
    color: #4a4a4a;
  }
  
  header .icon {
    width: 1rem;
    padding-left: .75rem;
  }
  
  header .mobile {
    display: none;
  }
  
  @media only screen and (max-width: 47.5rem) {
    header .desktop {
      display: none;
    }

    header .mobile {
      display: block;
      width: 100%;
    }

    header .navbar {
      padding: .5rem 0;
    }

    header .mobile ul {
      display: flex;
      justify-content: space-around;
      align-items: center;
      width: 100%;
    }

    header .mobile li {
      padding: 0;
    }

    /* This is meant to style the navbar Join Us button in mobile and tablet widths */
    header .navbar .button {
      padding: .1875rem .5rem;
      background-color: #9dc20b;
      line-height: 1.6;
      color: white;
    }
  }
  
  /* Note: tablet widths use the desktop navbar with this button in place of CTA button */
  /* Note that max-width is set to 1 pixel less than desktop width, or 894px */
  @media only screen and (min-width: 47.5rem) and (max-width: 55.875rem) {
    header .navbar .button {
    padding: .1875rem .5rem;
    background-color: #9dc20b;
    line-height: 1.6;
    color: white;
    }
  }

  /* Sign-up section */

  #sign-up-section {
    display: flex;
    justify-content: flex-start;
    align-items: flex-start;
    height: 43.5rem;
    background-image: url('../images/banner-landingpage.webp');
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
  }
  
  #sign-up-cta {
    position: relative;
    top: 10.6875rem;
    left: 10%;
    padding: 0 5rem 2.5rem 5rem;
    border: solid 1px #979797;
    border-radius: 4px;
    background-color: #525a38;
  }
  

  /*  #sign-up-cta:has(.content-section) .content-section { */
  .content-section #sign-up-cta { 
    width: 27.5rem;
    margin-top: 2rem;
    font-family: "Roboto", sans-serif;
    font-size: 1.25rem;
    line-height: 1.4;
    color: white;
  }
  
  #sign-up-cta h1 {
    font-size: 3.125rem;
  }
  
  #sign-up-cta h2 {
    font-size: 2.25rem;
  }

  #sign-up-cta span strong {
    font-weight: bold;
  }

  #sign-up-cta .cursive {
    font-family: "Damion", cursive;
  }

  #sign-up-cta .striking {
    font-family: "Sancreek", sans-serif;
    padding-bottom: .75rem;
  }

  #sign-up-cta .button {
    margin-top: 1.625rem;
    padding: 1.25rem 7.25rem;
  }
  

  @media only screen and (max-width: 55.875rem) { 
    #sign-up-section {
      align-items: center;
      justify-content: center;
      height: 28rem;
    }

    #sign-up-cta {
      position: static;
      width: auto;
      height: auto;
      background-color: transparent;
      border: none;
    }

    #sign-up-cta .navbar {
      margin-top: 0;
    }

    #sign-up-cta .email {
      display: none;
    }

    #sign-up-cta h1 {
      font-size: 3.125rem;
    }

    #sign-up-cta h2 {
      font-size: 2.25rem;
    }
  }


  @media only screen and (max-width: 37.5rem) {
    #sign-up-section {
      height: 20rem;
    }

    #sign-up-cta h1 {
      font-size: 2.25rem;
    }

    #sign-up-cta h2 {
      font-size: 2rem;
    }
  }

  /* Features section */

  #features-section.content-section {
    display: flex;
    justify-content: space-between;
    padding: 4rem 5%;
    background-color: #dae3c8;
  }

  .feature {
    flex: 1;
    padding: 2rem;
    margin: 0 1.25rem;
    background-color: white;
  }

  .feature .image-container {
    width: 90%;
    height: 65%;
    margin: 0 auto;
  }

  .feature .content-section {
    padding: 2.5rem 0;
  }

  .feature h2 {
    padding-bottom: .5rem;
    font-size: 2.25rem;
    font-weight: bold;
    color: #4a4a4a;
  }
  
  .feature h3 {
    font-size: 1rem;
    line-height: 1.2;
    font-weight: 300;
    color: #4a4a4a;
  }
  
  @media only screen and (max-width: 55.875rem) { 
    .feature h2 {
      font-size: 1.125rem;
      line-height: 1.3;
      font-weight: normal;
    }
  
    .feature h3 {
      font-size: .875rem;
      line-height: 1.4;
    }
  }
  
  @media only screen and (max-width: 47.5rem) {
    #features-section {
      flex-flow: column;
      padding: 0;
    }
  
    .feature {
      margin: 0;
      padding: 1.25rem 1rem 0 1rem;
    }
  
    .feature .content-section {
      padding: 1.25rem 0 1.875rem 0;
    }
  }
  
  /* Filters section */

  #filters-section.content-section.center {
    background-color: #525a38;
    padding: 4rem 0.625rem;
  }

  #filters-section.content-section.center {
    font-size: 2.25rem;
    font-weight: bold;
    color: white;
  }
  
  #filters-section.content-section.center h3 {
    font-size: 1rem;
    line-height: 1.4;
    font-weight: 300;
    color: white;
  }
  
  #filters-section .images-container {
    display: flex;
    max-width: 100%;
    padding: 0 1%;
  }

 @media only screen and (max-width: 37.5rem) {
    #filters-section {
      padding: 1.5rem 0 0 0;
    }
  
    #filters-section.content-section {
      margin-bottom: 1rem;
    }
  
    #filters-section.content-section h2 {
      padding-bottom: 0.625rem;
      font-size: 1.125rem;
      line-height: 1.3;
      font-weight: normal;
    }
  
    #filters-section.content-section h3 {
      font-size: .875rem;
      line-height: 1.4;
    }
  
    #filters-section .images-container {
      display: flex;
      flex-wrap: wrap;
      max-width: 100%;
      padding: 0;
  }
  
    #filters-section .extra {
      display: none;
    }
  }  

  /* Quote section */

  #quote-section.content-section.center {
    background-color: #dae3c8;
  }

  #quote-section.content-section.center {
    padding: 5rem 0;
  }

  #quote-section.content-section.center .quote {
    padding-right: 1.875rem;
    font-family: "Palatino", serif;
    font-size: 1.875rem;
    line-height: 1.1;
    font-style: italic;
    color: #4a4a4a;
  }

  #quote-section {
    height: 1.875rem;
  }
  
  @media only screen and (max-width: 47.5rem) {
    #quote-section .content-section {
      padding: 1.875rem .625rem;
    }
  
    #quote-section .quote {
      font-size: 1.5rem;
      line-height: 1.4;
    }
  
    #quote-section {
      display: block;
      padding-top: 1rem;
      margin: auto;
    }
  }


  /* People section */

  #people-section.content-section {
  background-color: #525a38;
  padding: 4rem 0.625rem;
}

  #people-section.content-section h2 {
    font-size: 2.25rem;
    font-weight: bold;
    color: white;
  }

  #people-section.content-section h3 {
    font-size: 1rem;
    line-height: 1.4;
    font-weight: 300;
    color: white;
  }

  #people-section .images-container {
    display: flex;
    flex-wrap: wrap;
    max-width: 100%;
    padding: 0 1%;
  }

  
  @media only screen and (max-width: 37.5rem) {
    #people-section.content-section {
      padding: 1.5rem 0 0 0;
    }

    #people-section.content-section {
      margin-bottom: 1rem;
    }

    #people-section.content-section h2 {
      padding-bottom: .625rem;
      font-size: 1.125rem;
      line-height: 1.3;
      font-weight: normal;
    }

    #people-section.content-section h3 {
      font-size: .875rem;
      line-height: 1.4;
    }

    #people-section .images-container {
      padding: 0;
    }
  }


  /* Footer */

  footer {
    background-color: #9b9b9b;
    padding: 1.5rem 2rem;
  }

  footer .content-section {
    color: white;
    display: flex;
    font-size: .75rem;
  }

  footer .copyright {
    flex-grow: 1;
  }

  @media only screen and (max-width: 37.5rem) {
    footer .content-section {
      font-size: .625rem;
    }
  }
  

